--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -1,4 +1,47 @@
-@media ( max-width: 500px )
-    body
-        color: green
+@media ( max-width: 1350px )
+    .header
+        .top-header
+            .logo
+                margin-left: 30px
+            .contact
+                margin-right: 30px
+@media ( max-width: 1200px )
+    .container--max-width 
+        max-width: 1200px      
+    .search 
+        &__input
+            max-width: 400px
+@media ( max-width: 1100px )
+    .search 
+        &__input
+            max-width: 300px
+@media ( max-width: 992px )
+    .header        
+        .container--max-width 
+            max-width: 992px
+        .top-header
+            .logo
+                margin-left: 20px
+            .contact
+                margin-right: 20px
+                &__tell
+                    font-size: 19px
+@media ( max-width: 900px )
+    .header   
+        .top-header
+            display: none
+        .header__menu
+            display: none
+@media ( max-width: 768px )
+    .header
+        .container--max-width 
+            max-width: 768px
+@media ( max-width: 576px )
+    .header
+        .container--max-width 
+            max-width: 576px
+    
+// @media ( max-width: 576px )
+//     .container--max-width 
+//         width: 100%
     
