--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -127,6 +127,9 @@
                 font-size: 18px
                 line-height: 21px
                 color: $green-color
+
+    .header__mobile
+        display: none
             
 
                 
