--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,6 @@
 body {
   font-family: "Roboto", sans-serif; }
 
-.body {
-  -webkit-transition: 0.5s;
-  transition: 0.5s; }
-
-.body.active {
-  background: rgba(0, 0, 0, 0.396); }
-
 .header {
   background: url("/src/img/header-top--background.png"), #fff; }
   .header .top-header .container--max-width {
@@ -101,7 +94,11 @@ body {
       font-size: 14px;
       line-height: 16px;
       text-align: right;
-      color: #686868; }
+      color: #686868;
+      position: relative;
+      top: -9px;
+      margin-bottom: 5px;
+      text-decoration: none; }
     .header .top-header .contact__tell {
       font-weight: 500;
       font-size: 24px;
@@ -216,6 +213,65 @@ body {
         -webkit-transform: translate(0%);
                 transform: translate(0%); }
 
+.body.active {
+  background: rgba(0, 0, 0, 0.396); }
+
+.body {
+  -webkit-transition: 0.5s;
+  transition: 0.5s; }
+  .body .title-info {
+    width: 100%;
+    height: 560px;
+    position: relative;
+    background: url("../img/header__slider--background.png"); }
+    .body .title-info .carousel-inner {
+      position: relative; }
+      .body .title-info .carousel-inner .carousel-item__image {
+        position: relative;
+        left: 660px;
+        margin-top: 50px;
+        width: 360px;
+        height: 420px; }
+      .body .title-info .carousel-inner .carousel-info {
+        text-align: left;
+        width: 481px;
+        position: relative;
+        top: -380px;
+        left: 2px; }
+        .body .title-info .carousel-inner .carousel-info__item {
+          color: #3E7850;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 18px;
+          line-height: 28px;
+          color: #3E7850;
+          margin-bottom: 16px; }
+        .body .title-info .carousel-inner .carousel-info__title {
+          font-style: normal;
+          font-weight: bold;
+          font-size: 40px;
+          line-height: 47px;
+          color: #252525; }
+        .body .title-info .carousel-inner .carousel-info__item-info {
+          font-style: normal;
+          font-weight: normal;
+          font-size: 18px;
+          line-height: 28px;
+          color: #252525; }
+        .body .title-info .carousel-inner .carousel-info__link {
+          font-size: 16px;
+          line-height: 19px;
+          color: #0060B8; }
+          .body .title-info .carousel-inner .carousel-info__link::after {
+            content: url("../img/arrow-link.png");
+            width: 5px;
+            height: 5px;
+            position: relative;
+            top: 2px;
+            left: 15px; }
+    .body .title-info .carousel-control-next-icon {
+      display: none; }
+
 @media (max-width: 1350px) {
   .header .top-header .logo {
     margin-left: 30px; }
@@ -226,11 +282,28 @@ body {
     max-width: 1200px; }
 
   .search__input {
-    max-width: 400px; } }
+    max-width: 400px; }
+
+  .body .title-info .carousel-inner .carousel-item__image {
+    left: 538px; } }
 @media (max-width: 1100px) {
   .search__input {
     max-width: 300px; } }
 @media (max-width: 992px) {
+  .body .container--max-width {
+    max-width: 992px; }
+  .body .title-info .carousel-inner .carousel-info {
+    width: 360px;
+    top: -260px;
+    left: 2px; }
+    .body .title-info .carousel-inner .carousel-info .carousel-info__title {
+      font-size: 28px; }
+  .body .title-info .carousel-inner .carousel-item__image {
+    left: 405px;
+    top: 36px;
+    width: 228px;
+    height: 265px; }
+
   .header .container--max-width {
     max-width: 992px; }
   .header .top-header .logo {
@@ -248,6 +321,10 @@ body {
     display: block;
     position: relative;
     z-index: 20; }
+    .header .header__mobile__mobile-inner {
+      position: fixed;
+      z-index: 20;
+      display: block; }
     .header .header__mobile .mobile-menu {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -257,14 +334,76 @@ body {
               align-items: center;
       -webkit-box-pack: justify;
           -ms-flex-pack: justify;
-              justify-content: space-between; }
+              justify-content: space-between;
+      position: fixed; }
       .header .header__mobile .mobile-menu__logo {
-        padding: 8px 0 8px 13px; } }
+        padding: 8px 0 8px 13px; }
+  .header .mobile-search {
+    background: #FFFFFF;
+    -webkit-box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.05);
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.05); }
+    .header .mobile-search .mobile-search-inner {
+      text-align: center; }
+    .header .mobile-search .search__form {
+      padding: 12px 15px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+    .header .mobile-search .search__input-mobile {
+      height: 44px;
+      width: 100%;
+      background: #FFFFFF;
+      border: 1px solid #CACACA;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box;
+      border-radius: 3px 0px 0px 3px; }
+    .header .mobile-search .search__input-mobile[placeholder] {
+      padding-left: 24px; }
+    .header .mobile-search .search__input-submit {
+      background: #3E7850;
+      border: none;
+      border-radius: 0px 3px 3px 0px;
+      color: #fff;
+      width: 62px; } }
 @media (max-width: 768px) {
   .header .container--max-width {
-    max-width: 768px; } }
+    max-width: 768px; }
+
+  .body .container--max-width {
+    max-width: 768px; }
+  .body .title-info .carousel-inner .carousel-item__image {
+    left: 155px;
+    top: 110px; }
+  .body .title-info .carousel-inner .carousel-info {
+    top: -310px; }
+    .body .title-info .carousel-inner .carousel-info__item {
+      font-size: 14px;
+      line-height: 28px;
+      margin-bottom: 5px; }
+    .body .title-info .carousel-inner .carousel-info__title {
+      font-size: 20px;
+      line-height: 23px; }
+    .body .title-info .carousel-inner .carousel-info__item-info {
+      display: none; } }
 @media (max-width: 576px) {
   .header .container--max-width {
-    max-width: 576px; } }
+    max-width: 576px; }
+
+  .body .container--max-width {
+    max-width: 576px; }
+  .body .title-info .carousel-inner .carousel-item__image {
+    left: 18%; } }
+@media (max-width: 420px) {
+  .body .title-info .carousel-inner .carousel-item__image {
+    left: 18%;
+    top: 120px; }
+  .body .title-info .carousel-inner .carousel-info {
+    top: -310px; }
+    .body .title-info .carousel-inner .carousel-info__title {
+      font-size: 25px;
+      width: 358px; } }
 
 /*# sourceMappingURL=style.css.map */
