--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -130,22 +130,24 @@
                 font-weight: 500
                 font-size: 18px
                 line-height: 21px
-                color: $green-color
-
+                color: $green-color                
     .header__mobile
         display: none
         .header__mobile-inner
-            .mobile-menu
-                position: relative                   
+            .mobile-menu                
+                background: url("/src/img/header-top--background.png")
+                position: fixed 
+                width: 100%
+                top: 0px      
+                left: 0px                            
                 &__contact
                     position: absolute
-                    right: 70px
+                    right: 80px
                 &__btn
                     background-color: #686868
                     width: 60px
                     height: 46px
-                    position: relative
-                    right: -15px
+                    position: relative                    
                 &__btn-span
                     width: 30px
                     height: 2px
@@ -190,10 +192,13 @@
                     opacity: 1
                     background: #fff
                 &__nav.active
-                    transform: translate(0%)
+                    transform: translate(0%)   
+                
 
 .body.active
     background: rgba(0, 0, 0, 0.396)
+    position: relative
+    z-index: 30
 .body
     transition: .5s
     .title-info
@@ -201,8 +206,12 @@
         height: 560px
         position: relative
         background: url('../img/header__slider--background.png')
+        .carousel-control-next-icon
+            display: none
+        .carousel-control-next-icon
+            display: none        
         .carousel-inner
-            position: relative
+            position: relative        
             .carousel-item__image
                 position: relative
                 left: 660px
@@ -246,12 +255,78 @@
                         position: relative
                         top: 2px
                         left: 15px
+    .catalog
+        padding-top: 64px 
+        background: #F7F7F7
+        .catalog-iner
+            &__title
+                font-style: normal
+                font-weight: bold
+                font-size: 36px
+                line-height: 42px
+                color: #252525
 
-
-        .carousel-control-next-icon
-            display: none
-        .carousel-control-next-icon
+                text-align: center
+                position: relative
+                &::after
+                    content: ""                    
+                    width: 82px
+                    height: 4px                    
+                    position: absolute
+                    top: 54px
+                    left: calc(50% - 46px)
+                    background: #3E7850
+            &__products
+                margin-top: 78px           
+            &__products-link
+                text-decoration: none    
+                cursor: url('../img/cursor.png'), pointer
+            &__products-title
+                font-size: 20px
+                line-height: 23px
+                color: #232323
+                text-decoration: none
+                margin-top: 20px
+                margin-left: 20px
+                position: relative
+            &__products-title::before
+                content: ''
+                position: absolute
+                width: 0px
+                height: 2px
+                background: #3E7850
+                top: 30px   
+                opacity: 0  
+                transition: 1s all           
+            &__products-item
+                width: 100%
+                overflow: auto
+                position: relative
+                background: #FFFFFF
+                box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.05)
+                border-radius: 6px
+                padding: 0                
+                transition: 1s all                
+            &__products-item:hover
+                transform: scale(1.1)                
+            &__products-item:hover .catalog-iner__products-title
+                color: $green-color
+            &__products-item:hover .catalog-iner__products-title::before
+                opacity: 1
+                width: 40px
+           
                 
+            
+                
+            &__products-img
+                width: 100%
+            
+
+                                
+                                
+
+
+       
 
 
 
